@@ -1,3 +1,12 @@
+2023-09-17  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-container.el (tramp-skeleton-completion-function):
+	Bind `tramp-verbose' to 0.
+	(tramp-toolbox--completion-function)
+	(tramp-flatpak--completion-function): Use METHOD as argument.
+	Use `tramp-skeleton-completion-function'.
+	(tramp-completion-multi-hop-methods): Add "toolbox" and "flatpak".
+
 2023-09-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-otp-password-prompt-regexp): New defcustom.
